Compile on Sun Studio 12u1

Taking the address of an r-value is not allowed on that compiler.

Thanks for the patch!

BUG: 222478

svn path=/branches/KDE/4.4/kdenetwork/kopete/; revision=1074424